@@ -215,8 +215,9 @@ extern const struct headerSprintfExtension rpmHeaderFormats[];
 #define RPMVAR_GZIPBIN     		36
 #define RPMVAR_RPMFILENAME     		37
 #define RPMVAR_PROVIDES     		38
+#define RPMVAR_BUILDSHELL               39
 
-#define RPMVAR_NUM			39     /* number of RPMVAR entries */
+#define RPMVAR_NUM			40     /* number of RPMVAR entries */
 
 char * rpmGetVar(int var);
 int rpmGetBooleanVar(int var);
