@@ -1,5 +1,7 @@
 2.4.100 -> 2.5
 	- handle files with spaces (put double quotes around them)
+        - new rpmrc setting, buildshell, can be used to set shell
+          used for build scripts (default is /bin/sh)
 
 2.4.99 -> 2.4.100:
 	- fixed handling of --rebuild and --recompile
